--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,7 @@
 <% if current_user %>
-  <%= link_to "Sign out", destroy_user_session_path, data: { turbo_method: :delete } %>
-<% else%> 
+  <%= link_to "Sing out", destroy_user_session_path, method: :delete %>
+  <%= render partial: 'products/import' %>
+<% else%>
   <%= link_to "Sign in", new_user_session_path %>
   <%= link_to "Sign up", new_user_registration_path %>
 <% end %>
