--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <% if current_user %>
   <%= link_to "Sing out", destroy_user_session_path, method: :delete %>
-  <%= render partial: 'products/import' %>
+  <%=link_to "Products", products_path %>
 <% else%>
   <%= link_to "Sign in", new_user_session_path %>
   <%= link_to "Sign up", new_user_registration_path %>
